projekt/gramatika_receptiParser.py
# Generated from gramatika_recepti.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatika_receptiParser ( Parser ):

    grammarFileName = "gramatika_recepti.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'imam'", "'sastojci'", "'pomoc'", 
                     "'daj'", "'predlozi'", "'mi'", "'recept'", "'sto'", 
                     "'mogu'", "'kuhati'", "'skuhati'", "'s'", "'od'", "'i'", 
                     "','", "':'", "<INVALID>", "<INVALID>", "'izlaz'", 
                     "'dovidenja'" ]

    symbolicNames = [ "<INVALID>", "POZDRAV", "IMAM", "SASTOJCI", "POMOC", 
                      "DAJ", "PREDLOZI", "MI", "RECEPT", "STO", "MOGU", 
                      "KUHATI", "SKUHATI", "S", "OD", "I", "ZAREZ", "DVOTOCKA", 
                      "INTERPUNKCIJA", "SASTOJAK", "IZLAZ", "DOVIDJENJA", 
                      "WS" ]

    RULE_ulaz = 0
    RULE_pozdrav = 1
    RULE_sastojciInput = 2
    RULE_listaSastojaka = 3
    RULE_zahtjevRecept = 4
    RULE_pomoc = 5
    RULE_izlaz = 6

    ruleNames =  [ "ulaz", "pozdrav", "sastojciInput", "listaSastojaka", 
                   "zahtjevRecept", "pomoc", "izlaz" ]

    EOF = Token.EOF
    POZDRAV=1
    IMAM=2
    SASTOJCI=3
    POMOC=4
    DAJ=5
    PREDLOZI=6
    MI=7
    RECEPT=8
    STO=9
    MOGU=10
    KUHATI=11
    SKUHATI=12
    S=13
    OD=14
    I=15
    ZAREZ=16
    DVOTOCKA=17
    INTERPUNKCIJA=18
    SASTOJAK=19
    IZLAZ=20
    DOVIDJENJA=21
    WS=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class UlazContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pozdrav(self):
            return self.getTypedRuleContext(gramatika_receptiParser.PozdravContext,0)


        def EOF(self):
            return self.getToken(gramatika_receptiParser.EOF, 0)

        def sastojciInput(self):
            return self.getTypedRuleContext(gramatika_receptiParser.SastojciInputContext,0)


        def zahtjevRecept(self):
            return self.getTypedRuleContext(gramatika_receptiParser.ZahtjevReceptContext,0)


        def pomoc(self):
            return self.getTypedRuleContext(gramatika_receptiParser.PomocContext,0)


        def izlaz(self):
            return self.getTypedRuleContext(gramatika_receptiParser.IzlazContext,0)


        def getRuleIndex(self):
            return gramatika_receptiParser.RULE_ulaz

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUlaz" ):
                listener.enterUlaz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUlaz" ):
                listener.exitUlaz(self)




    def ulaz(self):

        localctx = gramatika_receptiParser.UlazContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ulaz)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 14
                self.pozdrav()
                self.state = 15
                self.match(gramatika_receptiParser.EOF)
                pass
            elif token in [2, 3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 17
                self.sastojciInput()
                self.state = 18
                self.match(gramatika_receptiParser.EOF)
                pass
            elif token in [5, 6, 9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 20
                self.zahtjevRecept()
                self.state = 21
                self.match(gramatika_receptiParser.EOF)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 23
                self.pomoc()
                self.state = 24
                self.match(gramatika_receptiParser.EOF)
                pass
            elif token in [20, 21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 26
                self.izlaz()
                self.state = 27
                self.match(gramatika_receptiParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PozdravContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POZDRAV(self):
            return self.getToken(gramatika_receptiParser.POZDRAV, 0)

        def INTERPUNKCIJA(self):
            return self.getToken(gramatika_receptiParser.INTERPUNKCIJA, 0)

        def getRuleIndex(self):
            return gramatika_receptiParser.RULE_pozdrav

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPozdrav" ):
                listener.enterPozdrav(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPozdrav" ):
                listener.exitPozdrav(self)




    def pozdrav(self):

        localctx = gramatika_receptiParser.PozdravContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pozdrav)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(gramatika_receptiParser.POZDRAV)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 32
                self.match(gramatika_receptiParser.INTERPUNKCIJA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SastojciInputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaSastojaka(self):
            return self.getTypedRuleContext(gramatika_receptiParser.ListaSastojakaContext,0)


        def IMAM(self):
            return self.getToken(gramatika_receptiParser.IMAM, 0)

        def SASTOJCI(self):
            return self.getToken(gramatika_receptiParser.SASTOJCI, 0)

        def DVOTOCKA(self):
            return self.getToken(gramatika_receptiParser.DVOTOCKA, 0)

        def INTERPUNKCIJA(self):
            return self.getToken(gramatika_receptiParser.INTERPUNKCIJA, 0)

        def getRuleIndex(self):
            return gramatika_receptiParser.RULE_sastojciInput

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSastojciInput" ):
                listener.enterSastojciInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSastojciInput" ):
                listener.exitSastojciInput(self)




    def sastojciInput(self):

        localctx = gramatika_receptiParser.SastojciInputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sastojciInput)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 36
                self.match(gramatika_receptiParser.DVOTOCKA)


            self.state = 39
            self.listaSastojaka()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 40
                self.match(gramatika_receptiParser.INTERPUNKCIJA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaSastojakaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SASTOJAK(self, i:int=None):
            if i is None:
                return self.getTokens(gramatika_receptiParser.SASTOJAK)
            else:
                return self.getToken(gramatika_receptiParser.SASTOJAK, i)

        def I(self, i:int=None):
            if i is None:
                return self.getTokens(gramatika_receptiParser.I)
            else:
                return self.getToken(gramatika_receptiParser.I, i)

        def ZAREZ(self, i:int=None):
            if i is None:
                return self.getTokens(gramatika_receptiParser.ZAREZ)
            else:
                return self.getToken(gramatika_receptiParser.ZAREZ, i)

        def getRuleIndex(self):
            return gramatika_receptiParser.RULE_listaSastojaka

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaSastojaka" ):
                listener.enterListaSastojaka(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaSastojaka" ):
                listener.exitListaSastojaka(self)




    def listaSastojaka(self):

        localctx = gramatika_receptiParser.ListaSastojakaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listaSastojaka)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(gramatika_receptiParser.SASTOJAK)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==16:
                self.state = 44
                _la = self._input.LA(1)
                if not(_la==15 or _la==16):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 45
                self.match(gramatika_receptiParser.SASTOJAK)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ZahtjevReceptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECEPT(self):
            return self.getToken(gramatika_receptiParser.RECEPT, 0)

        def DAJ(self):
            return self.getToken(gramatika_receptiParser.DAJ, 0)

        def PREDLOZI(self):
            return self.getToken(gramatika_receptiParser.PREDLOZI, 0)

        def MI(self):
            return self.getToken(gramatika_receptiParser.MI, 0)

        def listaSastojaka(self):
            return self.getTypedRuleContext(gramatika_receptiParser.ListaSastojakaContext,0)


        def INTERPUNKCIJA(self):
            return self.getToken(gramatika_receptiParser.INTERPUNKCIJA, 0)

        def S(self):
            return self.getToken(gramatika_receptiParser.S, 0)

        def OD(self):
            return self.getToken(gramatika_receptiParser.OD, 0)

        def STO(self):
            return self.getToken(gramatika_receptiParser.STO, 0)

        def MOGU(self):
            return self.getToken(gramatika_receptiParser.MOGU, 0)

        def KUHATI(self):
            return self.getToken(gramatika_receptiParser.KUHATI, 0)

        def SKUHATI(self):
            return self.getToken(gramatika_receptiParser.SKUHATI, 0)

        def getRuleIndex(self):
            return gramatika_receptiParser.RULE_zahtjevRecept

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterZahtjevRecept" ):
                listener.enterZahtjevRecept(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitZahtjevRecept" ):
                listener.exitZahtjevRecept(self)




    def zahtjevRecept(self):

        localctx = gramatika_receptiParser.ZahtjevReceptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_zahtjevRecept)
        self._la = 0 # Token type
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 52
                    self.match(gramatika_receptiParser.MI)


                self.state = 55
                self.match(gramatika_receptiParser.RECEPT)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13 or _la==14:
                    self.state = 56
                    _la = self._input.LA(1)
                    if not(_la==13 or _la==14):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 59
                    self.listaSastojaka()


                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18:
                    self.state = 62
                    self.match(gramatika_receptiParser.INTERPUNKCIJA)


                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(gramatika_receptiParser.STO)
                self.state = 66
                self.match(gramatika_receptiParser.MOGU)
                self.state = 67
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13 or _la==14:
                    self.state = 68
                    _la = self._input.LA(1)
                    if not(_la==13 or _la==14):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 71
                    self.listaSastojaka()


                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18:
                    self.state = 74
                    self.match(gramatika_receptiParser.INTERPUNKCIJA)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PomocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POMOC(self):
            return self.getToken(gramatika_receptiParser.POMOC, 0)

        def INTERPUNKCIJA(self):
            return self.getToken(gramatika_receptiParser.INTERPUNKCIJA, 0)

        def getRuleIndex(self):
            return gramatika_receptiParser.RULE_pomoc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPomoc" ):
                listener.enterPomoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPomoc" ):
                listener.exitPomoc(self)




    def pomoc(self):

        localctx = gramatika_receptiParser.PomocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pomoc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(gramatika_receptiParser.POMOC)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 80
                self.match(gramatika_receptiParser.INTERPUNKCIJA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IzlazContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IZLAZ(self):
            return self.getToken(gramatika_receptiParser.IZLAZ, 0)

        def DOVIDJENJA(self):
            return self.getToken(gramatika_receptiParser.DOVIDJENJA, 0)

        def INTERPUNKCIJA(self):
            return self.getToken(gramatika_receptiParser.INTERPUNKCIJA, 0)

        def getRuleIndex(self):
            return gramatika_receptiParser.RULE_izlaz

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIzlaz" ):
                listener.enterIzlaz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIzlaz" ):
                listener.exitIzlaz(self)




    def izlaz(self):

        localctx = gramatika_receptiParser.IzlazContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_izlaz)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not(_la==20 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 84
                self.match(gramatika_receptiParser.INTERPUNKCIJA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





